@@ -2,6 +2,7 @@ Changelog file for Login component.
 
 Login 1.1.0
 ====================================
+- Added Profile snippet, which outputs Profile data of a User in placeholders
 - Added &useExtended to UpdateProfile/Register, which allows users to set additional fields passed to be set in extended column
 - Fixed bug in UpdateProfile where validators were broken
 
